# wrap-abi-bindgen

./: .gitignore  README.md  bugs  wrap-abi-bindgen.code-workspace
implementations/app-kotlin/: Cargo.toml  URI.txt  package.json  polywrap.deploy.yaml  polywrap.yaml
implementations/app-kotlin/src/: lib.rs
implementations/app-kotlin/src/helpers/: import_has_env.rs  is_soft_keyword.rs  mod.rs  nullable_default.rs  to_class_name.rs  to_kotlin_byte_array.rs  to_package_id.rs  to_upper.rs  util.rs
implementations/app-kotlin/src/templates/: mod.rs  module_kt.rs  types_kt.rs
implementations/app-swift/: Cargo.toml  URI.txt  package.json  polywrap.deploy.yaml  polywrap.yaml
implementations/app-swift/src/: lib.rs
implementations/app-swift/src/__tests__/: e2e.spec.ts
implementations/app-swift/src/helpers/: import_has_env.rs  is_keyword.rs  mod.rs  remove_module_suffix.rs
implementations/app-swift/src/templates/: Modules_swift.rs  Types_swift.rs  mod.rs
implementations/plugin-typescript/: Cargo.toml  URI.txt  package.json  polywrap.deploy.yaml  polywrap.yaml
implementations/plugin-typescript/src/: lib.rs
implementations/plugin-typescript/src/__tests__/: e2e.spec.ts
implementations/plugin-typescript/src/helpers/: detect_keyword.rs  is_keyword.rs  mod.rs  pretty.rs  to_graphql_type.rs  to_typescript.rs
implementations/plugin-typescript/src/templates/: index_ts.rs  mod.rs  module_ts.rs  types_ts.rs  wrap_info_ts.rs
implementations/wrap-assemblyscript/: .gitignore  Cargo.toml  URI.txt  package.json  polywrap.deploy.yaml  polywrap.yaml
implementations/wrap-assemblyscript/src/: base_types.rs  functions.rs  keywords.rs  lib.rs  renderer.rs
implementations/wrap-assemblyscript/src/__tests__/: e2e.spec.ts
implementations/wrap-assemblyscript/src/helpers/: apply_optional.rs  detect_keyword.rs  is_base_type.rs  is_keyword.rs  mod.rs  to_graphql_type.rs  to_msgpack.rs  to_wasm.rs  to_wasm_array.rs  to_wasm_init.rs  to_wasm_map.rs
implementations/wrap-assemblyscript/src/partials/: deserialize_arguments.rs  deserialize_array.rs  deserialize_enum.rs  deserialize_map_value.rs  deserialize_object.rs  deserialize_properties.rs  deserialize_result.rs  mod.rs  serialization_imports.rs  serialize_arguments.rs  serialize_array.rs  serialize_enum.rs  serialize_map_value.rs  serialize_object.rs  serialize_properties.rs  serialize_result.rs
implementations/wrap-assemblyscript/src/templates/: entry_ts.rs  index_ts.rs  mod.rs
implementations/wrap-assemblyscript/src/templates/enum_type/: index_ts.rs
implementations/wrap-assemblyscript/src/templates/env_type/: index_ts.rs  serialization_ts.rs
implementations/wrap-assemblyscript/src/templates/imported/: index_ts.rs  mod.rs
implementations/wrap-assemblyscript/src/templates/interface_type/: index_ts.rs  mod.rs
implementations/wrap-assemblyscript/src/templates/module_type/: index_ts.rs  mod.rs  module_ts.rs  serialization_ts.rs  wrapped_ts.rs
implementations/wrap-assemblyscript/src/templates/object_type/: index_ts.rs  mod.rs  serialization_ts.rs
implementations/wrap-assemblyscript/src/wrap/: entry.rs  mod.rs
implementations/wrap-assemblyscript/src/wrap/any_definition/: mod.rs  serialization.rs
implementations/wrap-assemblyscript/src/wrap/array_definition/: mod.rs  (+1 more)
implementations/wrap-typescript/: .gitignore  Cargo.toml  README.md  URI.txt  package.json  polywrap.deploy.yaml  polywrap.yaml  tsconfig.json
implementations/wrap-typescript/src/: definition_kind.rs  lib.rs
implementations/wrap-typescript/src/helpers/: apply_optional.rs  has_required.rs  indent_partial.rs  is_base_type.rs  to_wasm.rs  to_wasm_array.rs  to_wasm_init.rs  to_wasm_map.rs
implementations/wrap-typescript/src/templates/: common_ts.rs  entry_ts.rs  globals_d_ts.rs  index_ts.rs  mod.rs  module_ts.rs  types_ts.rs
implementations/wrap-typescript/types/: globals.d.ts
(+488 files in other folders)
