[package]
name = "plugin-typescript-wrap-abi-bindgen"
version = "0.1.0"
description = "Generates TypeScript plugin bindings from a WRAP ABI"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/wrap-abi-bindgen"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "~0.10.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.39" }
handlebars = { version = "4.3.7" }
lazy_static = { version = "1.4.0" }
regex = { version = "1.8.1" }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
