[package]
name = "template-wasm-rs"
version = "0.1.0"
description = "A Polywrap Wasm wrapper template written in Rust"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/monorepo"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "~0.10.2" }
serde = { version = "1.0", features = ["derive"] }
handlebars = { version = "4.3.7" }
lazy_static = { version = "1.4.0" }
regex = { version = "1.8.1" }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
